--- a/index.html
+++ b/index.html
@@ -110,13 +110,14 @@
       }
       .logo-image-span {  top: -.5em}
       }
-      @media only screen and (max-width: 1200px) { .spacer-div {display: none;} .card-image { margin-left: 0px;} .agent-logo-img {width: 90%}}
+      @media only screen and (max-width: 1200px) { .spacer-div {display: none;} .card-image { margin-left: 0px;} .agent-logo-img {width: 90%} .page-header-image {background-position: center 0px;}
       .footer {
       background: rgb(23, 72, 115);
       }
       .header-3 .title{ margin-top: 70%; }
       .agent-area {margin-top: -2em;}
       .fonts-hudson {font-size: 1.4em !important;}
+      .page-header-image {background-position: center -200px;}
    </style>
    <head>
       <meta charset="utf-8" />
@@ -185,7 +186,7 @@
          </div>
       </nav>
       <div class="page-header page-header-small">
-         <div class="page-header-image" style="background-image: url('images/image-banner.jpg'); background-position: center -200px;">
+         <div class="page-header-image" style="background-image: url('images/image-banner.jpg'); ">
          </div>
          <div class="content-center">
             <div class="row">
@@ -793,8 +794,7 @@
       
           scrollToTopBtn.click(function() {
               $('html, body').animate({ scrollTop: 0 }, 'slow'); // Smooth scroll to top
-          });
-      
+          });    
       });
    </script>
 </html>
