--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@
                   </div>
                </div>
             </div>
-            <footer class="footer">
+            <footer class="footer background-hudson">
                <div class=" container " id="contact">
                   <div class="row ml-auto mr-auto">
                      <div class="col-md-4">
@@ -794,7 +794,7 @@
       
           scrollToTopBtn.click(function() {
               $('html, body').animate({ scrollTop: 0 }, 'slow'); // Smooth scroll to top
-          });    
+          });
       });
    </script>
 </html>
